# forge-context-engine

./: .gitignore  BASELINE_FREEZE.md  CLAUDE.md  CONTRIBUTING.md  FORGE-CONTEXT-ARCHITECTURE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.forge/context/00-meta/: context-content-contract.md
docs/: README.md  first-workflow.md  getting-started.md  mode-selection.md  release-notes.md  workflow.md
docs/adapters/: README.md  claude.md  codex.md  github-copilot.md  opencode.md
docs/architecture/: README.md  adapter-model.md  cognition-model.md  lifecycle-model.md
docs/examples/: README.md  ai-readiness-report.md  ai-readiness-roadmap.md  backend-retry-flow.md  bounded-refactor.md  incident-analysis.md  mr-review.md
docs/examples/transaction-history-service/: README.md  ask-current-flow.md  execute-bounded-change.md  execute-validation.md  implementation-task-cards.md  plan-retry-history-update.md  planning-retry-history-update.md  review-mr-readiness.md  testing-validation.md
runtime/: .gitignore  AGENTS.md  CLAUDE.md
runtime/.forge/: adapter.md  forge.config.yaml
runtime/adapters/: README.md
runtime/adapters/claude/: README.md
runtime/adapters/codex/: AGENTS.md  README.md
runtime/skills/: README.md
scripts/: validate_forge_cli.py
specs/: adapter-command-foundation.md  ai-readiness.md  artifact-lifecycle.md  context-initialization.md  context-validation.md  framework-lifecycle.md  mode-invocation.md  platform-context.md  runtime-install-update.md  runtime-migration.md
src/forge_context_engine/: __init__.py  cli.py  context_builder.py  fs_ops.py  install_manifest.py  managed_blocks.py  runtime_ops.py  version.py
tests/: test_tool_selection.py
validation-cases/: adapter-parity.md  ai-readiness-mode-boundaries.md  artifact-continuity.md  artifact-policy.md  cli-contract-batch-b.md  context-impact-check.md  context-patch-workflow.md  convention-scoped-loading.md  execute-scope-and-blockers.md  final-config-shape.md  final-mode-boundaries.md  implementation-approval-gate.md  install-manifest-behavior.md  legacy-mode-compatibility-only.md  managed-file-conflict-behavior.md  plan-approval-gate.md  planning-approval-gate.md  review-fix-loop.md  review-with-validation-gaps.md  review-without-testing.md  runtime-install-update-boundaries.md  shared-runtime.md  stale-terminology-guards.md  target-repo-surface.md  template-packaging-hygiene.md  workspace-multirepo-boundary.md
(+113 files in other folders)
