[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-context-engine"
version = "1.0.0rc1"
description = "Forge Context Engine packaging and CLI foundation"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Yoga Yulanda" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yogayulanda/forge-context-engine"
Repository = "https://github.com/yogayulanda/forge-context-engine"

[project.scripts]
forge = "forge_context_engine.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
forge_context_engine = [
  "runtime_templates/**/*.md",
  "runtime_templates/**/*.yaml",
  "runtime_templates/**/*.txt",
  "runtime_templates/**/.gitignore",
  "runtime_templates/**/.gitkeep",
  "runtime_templates/**/.forge/**/*.md",
  "runtime_templates/**/.forge/**/*.yaml",
  "runtime_templates/**/.forge/**/*.txt",
  "runtime_templates/**/.forge/**/.gitignore",
  "runtime_templates/**/.forge/**/.gitkeep",
  "runtime_templates/**/.claude/**/*.md",
  "runtime_templates/**/.claude/**/*.yaml",
  "runtime_templates/**/.claude/**/*.txt",
  "runtime_templates/**/.github/**/*.md",
  "runtime_templates/**/.github/**/*.yaml",
  "runtime_templates/**/.github/**/*.txt",
]
